Case-4-F1 Kayıt Ekran Tasarımı Tamamlandı.

--- a/codes/LearnEnglish/app/src/main/res/values/strings.xml
+++ b/codes/LearnEnglish/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">LearnEnglish</string>
+    <string name="name">İsim</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Şifre</string>
+    <string name="register">Kaydol</string>
+    <string name="not_register">Zaten bir hesabınız varmı?</string>
+
 </resources>
