--- a/codes/LearnEnglish/app/src/main/res/values/strings.xml
+++ b/codes/LearnEnglish/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="prompt_password">Şifre</string>
     <string name="register">Kaydol</string>
     <string name="not_register">Zaten bir hesabınız varmı?</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
